<resources>
    <string name="app_name">BakingApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="measure">Measure:</string>
    <string name="quantitiy">Quantity:</string>
    <string name="ingedrient">Ingredient:</string>
    <string name="btn_next">Next</string>
    <string name="btn_prev">Previous</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="ingredients">Ingredients</string>
    <string name="no_recipe_selected">No Recipe Selected</string>
    <string name="widget_item_format">WHUUT</string>
</resources>
