<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_margin="2dp"
        android:layout_height="wrap_content"

        card_view:cardCornerRadius="12dp"
        card_view:cardBackgroundColor="@color/colorSugarish">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fxtv_ingredient_quantity"
                android:layout_width="167dp"
                android:fontFamily="sans-serif-smallcaps"

                android:layout_height="41dp"
                android:layout_gravity="center"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"

                android:text="@string/quantitiy"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.075"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                tools:text="Quantity:" />

            <TextView
                android:id="@+id/fxtv_ingredient_measure"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_width="167dp"
                android:layout_height="41dp"
                android:layout_gravity="center"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="8dp"
                android:gravity="center"

                android:text="@string/measure"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp"
                card_view:layout_constraintEnd_toEndOf="@+id/tv_ingredient_quantity"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintStart_toStartOf="@+id/fxtv_ingredient_quantity"
                card_view:layout_constraintTop_toBottomOf="@+id/fxtv_ingredient_quantity"
                tools:text="Measure:" />

            <TextView
                android:id="@+id/fxtv_ingredient_ingredient"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_width="167dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"

                android:text="@string/ingedrient"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp"
                card_view:layout_constraintEnd_toEndOf="@+id/tv_ingredient_measure"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintStart_toStartOf="@+id/fxtv_ingredient_measure"
                card_view:layout_constraintTop_toBottomOf="@+id/fxtv_ingredient_measure"
                tools:text="Ingredient:" />

            <TextView
                android:id="@+id/tv_ingredient_quantity"
                android:fontFamily="sans-serif"
                android:layout_width="171dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:gravity="center"

                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="1.0"
                card_view:layout_constraintStart_toEndOf="@+id/fxtv_ingredient_quantity"
                card_view:layout_constraintTop_toTopOf="parent"
                tools:text="1.5" />

            <TextView
                android:id="@+id/tv_ingredient_measure"
                android:fontFamily="sans-serif"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:gravity="center"

                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="1.0"
                card_view:layout_constraintStart_toStartOf="@+id/tv_ingredient_quantity"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_ingredient_quantity"
                tools:text="Cup" />

            <TextView
                android:id="@+id/tv_ingredient_ingredient"
                android:fontFamily="sans-serif"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"

                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="@+id/fxtv_ingredient_ingredient"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/fxtv_ingredient_ingredient"
                card_view:layout_constraintVertical_bias="1.0"
                tools:text="Mascapone Cheese(room temperature)" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>