<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv_ingredient_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="2dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:visibility="visible"
        card_view:cardBackgroundColor="@color/colorAccent"
        card_view:cardCornerRadius="12dp"
        card_view:layout_constraintBottom_toBottomOf="@+id/ll_step_item"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fxtv_ingredient_quantity"
                android:layout_width="167dp"
                android:layout_height="41dp"

                android:layout_gravity="center"
                android:layout_marginEnd="8dp"

                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:text="@string/quantitiy"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.04"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_ingredient_ingredient"
                tools:text="Quantity:" />

            <TextView
                android:id="@+id/fxtv_ingredient_measure"
                android:layout_width="167dp"
                android:layout_height="41dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"

                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:text="@string/measure"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintStart_toStartOf="@+id/fxtv_ingredient_quantity"
                card_view:layout_constraintTop_toBottomOf="@+id/fxtv_ingredient_quantity"
                card_view:layout_constraintVertical_bias="0.0"
                tools:text="Measure:" />

            <TextView
                android:id="@+id/fxtv_ingredient_ingredient"
                android:layout_width="167dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"

                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:text="@string/ingedrient"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                tools:text="Ingredient:" />

            <TextView
                android:id="@+id/tv_ingredient_quantity"
                android:layout_width="171dp"
                android:layout_height="40dp"
                android:layout_gravity="center"

                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.555"
                card_view:layout_constraintStart_toEndOf="@+id/fxtv_ingredient_quantity"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_ingredient_ingredient"
                card_view:layout_constraintVertical_bias="0.137"
                tools:text="1.5" />

            <TextView
                android:id="@+id/tv_ingredient_measure"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"

                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toEndOf="@+id/fxtv_ingredient_measure"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_ingredient_quantity"
                tools:text="Cup" />

            <TextView
                android:id="@+id/tv_ingredient_ingredient"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"

                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/fxtv_ingredient_ingredient"
                tools:text="Mascapone Cheese(room temperature)" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

  <!--  <LinearLayout
        android:id="@+id/ll_step_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorSugarish">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >

                    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                        android:id="@+id/exoview_step"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"




                        ></com.google.android.exoplayer2.ui.SimpleExoPlayerView>


                    <TextView
                        android:id="@+id/tv_step_short_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:fontFamily="casual"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="24sp"
                        tools:text="Short Desc:" />

                    <TextView
                        android:id="@+id/tv_step_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:fontFamily="casual"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        tools:text="Desc" />

                </LinearLayout>
            </ScrollView>



        </LinearLayout>


    </LinearLayout>-->



</FrameLayout>